# nb-omr

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  streamlit_app.py
data_augmentation/: __init__.py  data_augmentation.py  transforms_custom.py
music_omr/: kinematics.tex  lukket_multimodalt_system.tex  probability_connections.tex  referanser.bib
nb_omr/: __init__.py  batch.py  export.py  inference.py  pipeline.py  preprocess.py  reporting.py  runtime.py  types.py
nb_omr/ekern/: __init__.py  lint.py  normalize.py  validate.py
smt_model/: __init__.py  configuration_smt.py  modeling_smt.py
