[project]
name = "nb-omr"
version = "0.1.0"
description = "Minimal OMR prototype using Sheet Music Transformer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "music21>=10.1.0",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "scikit-image>=0.25.2",
    "streamlit>=1.57.0",
    "torch>=2.5.1,<2.6",
    "torchvision>=0.20.1,<0.21",
    "transformers>=4.49.0,<5",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cu121", marker = "platform_system == 'Linux'" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
